K8s/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "sportscar-track"
  namespace: "cars"
  labels:
    app: "frontend"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 5000
  selector:
    app: "frontend"
  type: "ClusterIP"
