K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sportscar-track
  namespace: cars

  annotations:
    alb.ingress.kubernetes.io/group.name: k8s-scanner-appscann-d6c82922c8
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:794934876309:certificate/641080d5-eabc-4f04-9b98-882355adc2b2
spec:
  ingressClassName: alb
  rules:
  - host: cars.sivadevops.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sportscar-track
            port:
              number: 80
